--- a/project/WarmlyLampChat/WarmlyLampChat-war/web/views/advertiser/edit_ad.xhtml
+++ b/project/WarmlyLampChat/WarmlyLampChat-war/web/views/advertiser/edit_ad.xhtml
@@ -1,9 +1,9 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
-    xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-    template="./templates/template.xhtml"
-    xmlns:h="http://xmlns.jcp.org/jsf/html">
+                xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
+                template="./../../templates/template.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html">
 
     <ui:define name="title">
         Редактирование рекламного блока
@@ -17,8 +17,6 @@
                 <h:inputText id="title" value="#{advertiserController.adBlock.title}" title="Title" />
                 <h:outputLabel value="Content:" for="content" />
                 <h:inputText id="content" value="#{advertiserController.adBlock.content}" title="Content" />
-                <h:outputLabel value="DaysOfActive:" for="daysOfActive" />
-                <h:inputText id="daysOfActive" value="#{advertiserController.adBlock.daysOfActive}" title="DaysOfActive" />
             </h:panelGrid>
             <h:commandButton action="#{advertiserController.editAdBlockConfirm()}" value="Сохранить"/>
         </h:form>
