--- a/project/WarmlyLampChat/WarmlyLampChat-war/web/views/login.xhtml
+++ b/project/WarmlyLampChat/WarmlyLampChat-war/web/views/login.xhtml
@@ -1,7 +1,7 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./templates/template.xhtml"
+                template="./../templates/template.xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
@@ -21,7 +21,7 @@
                     <f:selectItems value="#{demoController.roles}"/>
                 </h:selectOneMenu> 
                 <h:commandButton action="#{demoController.login()}" value="Войти"/>
-            <h:button outcome="register" value="Зарегестрироваться"/>
+                <h:button outcome="register" value="Зарегестрироваться"/>
             </h:panelGrid>
         </h:form>
     </ui:define>
