--- a/project/WarmlyLampChat/WarmlyLampChat-war/web/views/user/room.xhtml
+++ b/project/WarmlyLampChat/WarmlyLampChat-war/web/views/user/room.xhtml
@@ -2,7 +2,7 @@
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns="http://www.w3.org/1999/xhtml"
                 xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./templates/template.xhtml"
+                template="./../../templates/template.xhtml"
                 xmlns:h="http://xmlns.jcp.org/jsf/html"
                 xmlns:f="http://xmlns.jcp.org/jsf/core">
 
@@ -23,7 +23,7 @@
                 <f:facet name="header">
                     <h:outputText value="Отправитель"/>
                 </f:facet>
-                <h:outputText value="#{item.sender}"/>
+                <h:outputText value="#{item.sender.nickName}"/>
             </h:column>
             <h:column>
                 <f:facet name="header">
@@ -35,7 +35,7 @@
             </h:column>
         </h:dataTable>
         <h:form>
-            <h:inputTextarea value="#{userController.message}"/><br/>
+            <h:inputTextarea value="#{userController.messageText}"/><br/>
             <h:commandButton action="#{userController.sendMessage()}" value="Отправить"/><br/>
             <h:commandButton action="#{userController.leaveRoom()}" value="Выйти из комнаты"/>
         </h:form>
