--- a/project/WarmlyLampChat/WarmlyLampChat-war/web/views/advertiser/advertiser_index.xhtml
+++ b/project/WarmlyLampChat/WarmlyLampChat-war/web/views/advertiser/advertiser_index.xhtml
@@ -59,7 +59,7 @@
                 </h:column>
             </h:dataTable>
             <h:commandButton action="#{advertiserController.createAdBlock()}" value="Создать рекламный блок"/>
-            <h:button outcome="logout" value="Выйти из учетной записи"/>
+            <h:commandButton action="#{authController.logout()}" value="Выйти из учетной записи"/>
         </h:form>
     </ui:define>
 </ui:composition>
