--- a/project/WarmlyLampChat/WarmlyLampChat-war/web/views/register.xhtml
+++ b/project/WarmlyLampChat/WarmlyLampChat-war/web/views/register.xhtml
@@ -1,15 +1,28 @@
 <?xml version='1.0' encoding='UTF-8' ?>
 <!DOCTYPE composition PUBLIC "-//W3C//DTD XHTML 1.0 Transitional//EN" "http://www.w3.org/TR/xhtml1/DTD/xhtml1-transitional.dtd">
 <ui:composition xmlns:ui="http://xmlns.jcp.org/jsf/facelets"
-                template="./templates/template.xhtml"
-                xmlns:h="http://xmlns.jcp.org/jsf/html">
+                template="./../templates/template.xhtml"
+                xmlns:h="http://xmlns.jcp.org/jsf/html"
+                xmlns:f="http://xmlns.jcp.org/jsf/core">
     <ui:define name="title">
         Регистрация
     </ui:define>
 
     <ui:define name="content">
         <h:form>
-            <h:outputText value="Тут будет форма регистрации..."/>    
+            <h:panelGrid columns="2">
+                <h:outputLabel for="fio" value="Фамилия Имя Очество"/>
+                <h:inputText value="#{authController.registerData.fio}" id="fio"/>
+                <h:outputLabel for="login" value="Логин"/>
+                <h:inputText value="#{authController.registerData.nickName}" id="login"/>
+                <h:outputLabel for="password" value="Пароль"/>
+                <h:inputSecret value="#{authController.registerData.password}" id="password"/>
+                <h:outputLabel for="role" value="Роль"/>
+                <h:selectOneMenu value="#{authController.registerData.roleName}" id="role">
+                    <f:selectItems value="#{authController.allRoles}" var="role" itemLabel="#{role.name}" itemValue="#{role.name}"/>
+                </h:selectOneMenu>
+                <h:commandButton action="#{authController.register()}" value="Зарегестрироваться"/>
+            </h:panelGrid>
         </h:form>
         <h:button outcome="login" value="На страницу авторизации"/>
     </ui:define>
