--- a/project/WarmlyLampChat/WarmlyLampChat-war/web/resources/css/style.css
+++ b/project/WarmlyLampChat/WarmlyLampChat-war/web/resources/css/style.css
@@ -17,11 +17,67 @@ body {
     padding-left: 20px;
 }
 
+.header h1{
+    font-weight: normal;
+}
+
 .main {
     width: 85%;
     margin: 100px auto;
     background-color: snow;
     padding: 10px;
+}
+
+.panel {
+    position: fixed;
+    width: 20%;
+    height: 100%;
+    padding-top: 20px;
+    color: snow;
+    background-color: black;
+    opacity: 0.8;
+    top: 0;
+    right: -20%;
+    transition: all 0.5s;
+    overflow: auto;
+    z-index: 2;
+    border-left: 5px solid black;
+}
+
+.panel:hover {
+    right: 0%;
+}
+
+.element {
+    width: 100%;
+    padding-left: 20px;
+    height: 50px;
+    line-height: 50px;
+    cursor: pointer;
+    transition: all 0.5s;
+}
+
+.element a {
+    text-decoration: none;
+    color: snow;
+    transition: all 0.5s;
+}
+
+.element:hover {
+    background-color: aliceblue;
+    padding-left: 25px;
+}
+
+.element:hover a {
+    color: black;
+}
+
+.messages {
+    width: 100%;
+    border: 1px dashed gray;
+    border-radius: 15px;
+    margin: 0 auto;
+    margin-bottom: 20px;
 }
 
 .message {
@@ -30,7 +86,7 @@ body {
     background-color: lightblue;
     padding: 10px;
     border-radius: 15px;
-    transition: all 0.5s;
+    transition-duration: 0.5s;
 }
 
 .message:hover {
@@ -54,6 +110,63 @@ body {
 }
 
 .input_message {
-    width: 75%;
+    width: 100%;
     outline: none;
+    border: 1px solid lightgray;
+    border-radius: 15px;
+    padding: 10px;
+    font-size: 1.3em;
+    font-family: cursive;
+}
+
+input[type="button"], input[type="submit"] {
+    outline: none;
+    padding: 7px 10px;
+    border-radius: 15px;
+    border: none;
+    font-size: 1.1em;
+    box-shadow: 1px 1px 2px gray;
+    transition: all 0.5s;
+}
+
+input[type="button"]:hover, input[type="submit"]:hover {
+    cursor: pointer;
+    box-shadow: 2px 2px 3px gray;
+    background-color: snow;
+}
+
+input[type="text"], input[type="password"] {
+    outline: none;
+    font-size: 1.1em;
+    border: 1px solid lightgray;
+    padding: 7px 10px;
+    transition: all 0.5s;
+    border-radius: 15px;
+}
+
+input[type="text"]:hover, input[type="password"]:hover {
+    box-shadow: 2px 2px 7px #eee;
+}
+
+input[type="text"]:focus, input[type="password"]:focus {
+    box-shadow: 2px 2px 7px #72a9dc;
+}
+
+label {
+    font-weight: bold;
+    font-size: 1.1em;
+}
+
+::-webkit-scrollbar {
+    width: 12px;
+}
+::-webkit-scrollbar-track {
+    background-color: #eaeaea;
+    border-left: 1px solid #ccc;
+}
+::-webkit-scrollbar-thumb {
+    background-color: #ccc;
+}
+::-webkit-scrollbar-thumb:hover {
+    background-color: #aaa;
 }
