--- a/project/WarmlyLampChat/WarmlyLampChat-war/web/views/moderator/moderator_index.xhtml
+++ b/project/WarmlyLampChat/WarmlyLampChat-war/web/views/moderator/moderator_index.xhtml
@@ -36,7 +36,7 @@
             </h:dataTable>
             <h:commandButton action="#{authController.logout()}" value="Выйти из учетной записи"/>
         </h:form>
-
+        <h:button outcome="keywords_list" value="На страницу ключевых слов"/>
     </ui:define>
 
 </ui:composition>
