--- a/project/WarmlyLampChat/WarmlyLampChat-war/web/views/advertiser/pay_ad.xhtml
+++ b/project/WarmlyLampChat/WarmlyLampChat-war/web/views/advertiser/pay_ad.xhtml
@@ -11,7 +11,7 @@
 
     <ui:define name="content">
         <h:form>
-            Здесь будет форма оптлаты...
+            Здесь будет форма оптлаты...<br/>
             <h:commandButton action="#{advertiserController.payForAdBlockConfirm()}" value="Оплатить"/>
         </h:form>
         <h:button outcome="index" value="На главную"/>
